# tradr-rs

./: .gitignore  CHANGELOG.md  Cargo.toml
src/: backtesting.rs  engine.rs  holder.rs  lib.rs  main.rs  manager.rs  processor.rs  risk.rs  serialization.rs  time.rs  timing.rs  traits.rs  utils.rs
src/indicators/: bbands.rs  mod.rs  vwap.rs
src/markets/: fee.rs  manager.rs  mod.rs  utils.rs
src/markets/coinbase/: mod.rs  order.rs
src/portfolio/: assets.rs  capital.rs  mod.rs  performance.rs  persistence.rs  position.rs  risk.rs  tracked.rs  trade.rs
src/strategies/: consensus.rs  mod.rs
src/types/: candles.rs  market.rs  mod.rs  reason_code.rs  signals.rs  time.rs  traits.rs
src/types/trades/: executed.rs  failed.rs  future.rs  mod.rs  trade.rs
tests/: portfolio.rs
