[package]
name = "tradr"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.75", features = [] }
base64 = "0.13.1"
chrono = { version = "0.4.38", features = [] }
csv = "1.1.6"
polars = { version = "0.41.3", features = ["temporal", "lazy", "semi_anti_join", "dtype-struct", "rolling_window"] }
polars-io = { version = "0.41.3", features = ["csv"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
ta = "0.5.0"
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }
sqlite = "0.36.0"
rand = "0.8.5"
rust_decimal = { version = "1.35.0" , features = ["serde", "maths"]}
rust_decimal_macros = "1.35.0"
thiserror = "1.0.51"
log = "0.4.20"